# resize_image_web

./: .gitignore  Dockerfile  Readme.md
.github/workflows/: rust.yaml
resize_wasm/src/: compressor.rs
server/: Cargo.toml
server/public/: index.html
server/public/assets/: index.css  index.js  jpgcompressor.js  jpgcompressor.wasm  jpgsquash.js  style.css
server/src/: main.rs
